# docker-image-security

./: .dockerignore  .gitignore  README.md  cosign.pub
app/: .gitignore  README.md  pyproject.toml
app/src/app/: main.py
app/tests/: test_smoke.py
attacks/: 01-history-secret.sh  02-cve-exploit.sh  03-unsigned-swap.sh
ci/: Jenkinsfile  agent-pod.yaml
docker/: .dockerignore  Dockerfile  Dockerfile.bad  requirements.secure.in
k8s/: 00-namespace.yaml
policy/conftest/: docker.rego
policy/kyverno/: 04-verify-cosign.yaml
scripts/: cosign-setup.sh  cosign-sign-local.sh  cosign-verify.sh
